--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Reopening RI
-description: Rhode Island's Phased Covid-19 Plan
+description: Rhode Island's chart toward reopening our economy in a phased approach.
 
 repository: civic-imagination/summit-website.git
 github.pages_hostname: https://civicfutures.io
